# chatgpt-images-2-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: topics.txt
.github/workflows/: apply-topics.yml
docs/: edit-image.md  faq.md  image-sizes.md  prompts-gallery.md  streaming.md  text-to-image.md
gpt_image_2/: __init__.py  cli.py  client.py  download.py  models.py
node/: edit-image.js  package.json  queue-submit.js  text-to-image-stream.js  text-to-image.js
node/examples/: boardroom.js  bus-livery-edit.js  hero-infographic.js  news-anchor.js  studio-wall.js  vinyl-album-edit.js
node/lib/: save.js
python/: edit_image.py  queue_submit.py  requirements.txt  text_to_image.py  text_to_image_stream.py
python/examples/: _common.py  boardroom.py  bus_livery_edit.py  hero_infographic.py  news_anchor.py  studio_wall.py  vinyl_album_edit.py
scripts/: apply-github-topics.sh
